--- a/index.html
+++ b/index.html
@@ -189,13 +189,10 @@
       text-align: center;
       padding: 10px;
       opacity: 0;
-      /* 默认隐藏 */
       transition: opacity 0.5s ease, transform 0.5s ease;
-      /* 增加 transform 过渡，让效果更平滑 */
       pointer-events: none;
-      /* 让文字不阻挡鼠标事件 */
       transform: translateY(10px);
-      /* 默认向下偏移一点，为动画做准备 */
+
     }
 
     /* 新增：hover-text 的高亮状态 */
@@ -204,10 +201,10 @@
       opacity: 1;
       transform: translateY(0);
       background-color: rgba(0, 0, 0, 0.5);
-      text-decoration: none;
       font-weight: bold;
       font-size: 2em;
       font-family: 'SimHei', 'Microsoft YaHei', sans-serif;
+      letter-spacing: 0.2em;
     }
 
     /* 激活元素样式 */
@@ -223,6 +220,64 @@
     .img-container.active .hover-text:not(.highlight) {
       opacity: 1;
       transform: translateY(0);
+    }
+
+    /* 响应式调整 - 小屏幕适配 */
+    @media (max-width: 900px) {
+      .hero {
+        flex-direction: column;
+        gap: 30px;
+      }
+
+      .side-cover {
+        flex-direction: row;
+        gap: 30px;
+      }
+
+      .cover-small-left,
+      .cover-small-right {
+        width: 15vh;
+        height: 15vh;
+      }
+
+      .img-container {
+        width: 140px;
+      }
+
+      h1.text-uppercase {
+        font-size: 1.5em;
+        letter-spacing: 0.3em;
+      }
+
+      .font-italic.lead {
+        font-size: 1em;
+        letter-spacing: 0.1em;
+      }
+    }
+
+    @media (max-width: 600px) {
+      .gallery {
+        gap: 15px;
+      }
+
+      .img-container {
+        width: 120px;
+        aspect-ratio: 3 / 2;
+      }
+
+      .side-cover {
+        gap: 20px;
+      }
+
+      .cover-small-left,
+      .cover-small-right {
+        width: 12vh;
+      }
+
+      h1.text-uppercase {
+        font-size: 1.2em;
+        letter-spacing: 0.2em;
+      }
     }
   </style>
 
@@ -356,6 +411,11 @@
             <a href="https://aj300542.github.io/ss/" class="d-block mb-1" target="_blank">
               <img src="img/p2_ss.jpg" alt="..."></a>
             <div class="hover-text">空洞骑士：丝之歌</div>
+          </div>
+          <div class="img-container">
+            <a href="https://aj300542.github.io/3d/" class="d-block mb-1" target="_blank">
+              <img src="img/p3d_ss.jpg" alt="..."></a>
+            <div class="hover-text">模型作品</div>
           </div>
           <p class="font-italic lead">
             <a href="download.html" style="
